--- a/src/main.css
+++ b/src/main.css
@@ -7,6 +7,21 @@
   @apply text-5xl my-3 font-bold;
 }
 
+.markdown-container a {
+  @apply dark:text-amber-300 text-indigo-500 relative;
+}
+
+.markdown-container a::before {
+  content: "" !important;
+  width: 110%;
+  position: absolute;
+  bottom: -3px;
+  left: -5%;
+  height: 1px;
+  @apply dark:bg-amber-300 bg-indigo-500;
+}
+
+
 .markdown-container h2 {
   @apply text-4xl my-2 font-bold;
 }
