--- a/src/main.css
+++ b/src/main.css
@@ -13,10 +13,9 @@
 
 .markdown-container a::before {
   content: "" !important;
-  width: 110%;
+  width: 100%;
   position: absolute;
   bottom: -3px;
-  left: -5%;
   height: 1px;
   @apply dark:bg-amber-300 bg-indigo-500;
 }
@@ -24,6 +23,13 @@
 
 .markdown-container h2 {
   @apply text-4xl my-2 font-bold;
+}
+
+.markdown-container ul {
+  @apply list-disc ml-6;
+}
+.markdown-container ol {
+  @apply list-decimal ml-6;
 }
 
 .markdown-container h3 {
